templates/wekan_template.yaml
---
# Source: wekan/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-wekan
  labels:
    app: wekan
    chart: wekan-1.1.1
    component: wekan
    heritage: Helm
    release: release-name
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: wekan
    component: wekan
    release: release-name
---
# Source: wekan/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-wekan
  labels:
    app: wekan
    chart: wekan-1.1.1
    component: wekan
    release: release-name
    heritage: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wekan
      component: wekan
      release: release-name
  template:
    metadata:
      annotations:
      labels:
        app: wekan
        component: wekan
        release: release-name
    spec:
      serviceAccountName: release-name-wekan
      containers:
        - name: wekan
          image: "quay.io/wekan/wekan:v5.65"
          imagePullPolicy: IfNotPresent
          terminationMessagePolicy: FallbackToLogsOnError
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
          resources:
            limits:
              cpu: 500m
              memory: 1Gi
            requests:
              cpu: 300m
              memory: 128Mi
---
# Source: wekan/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-wekan
  labels:
    app: wekan
    chart: wekan-1.1.1
    component: wekan
    heritage: Helm
    release: release-name
spec:
  ingressClassName: haproxy
  rules:
    - host: wekan.local
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: release-name-wekan
                port:
                  number: 8080
---
# Source: wekan/templates/tests/test-http.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "release-name-wekan-test-http"
  labels:
    app: wekan
    chart: wekan-1.1.1
    component: wekan
    release: release-name
    heritage: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget', '-O', '/dev/stdout']
      args: ['release-name-wekan:8080']
  restartPolicy: Never
